language/move-lang/tests/move_check/expansion/global_access_value.exp
error: 

   ┌── tests/move_check/expansion/global_access_value.move:3:13 ───
   │
 3 │         1 + ::global_value
   │             ^^^^^^^^^^^^^^ Unexpected global name '::global_value'. Global names are not values
   │

